Fix to prevent legend tag content escaping bounds on IE browsers

--- a/app/assets/stylesheets/layouts/_pre_qualification_questions.scss
+++ b/app/assets/stylesheets/layouts/_pre_qualification_questions.scss
@@ -18,6 +18,7 @@
   @include body(22,30);
   font-weight: 700;
   color: $color-heading-default;
+  width: 100%;
 }
 
 .l-pre-qualification__question--with-desc {
